--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@
             padding: 80px 0px2
             text-align: center;
             color: #fcfffb;
+             text-align: center;
     
 }
 .property-box{
